# FlipTracker

./: .gitignore  CMakeLists.txt  FlipTracker1.desktop  README.md  main.cpp
